# lexer

./: .clang-format  CMakeLists.txt  README.md  main.cpp
src/: Args.cpp  Args.h  Lexer.cpp  Lexer.h  NumberParser.cpp  NumberParser.h  Token.h  TokensPrinter.cpp  TokensPrinter.h
tests/: CMakeLists.txt  Lexer.test.cpp  invalid_lexemes.txt  numbers.txt  simple.txt  valid.txt
tests/files/: class-declaration.txt  invalid-lexemes.txt  logical-operators.txt
tests/files/output/: class-declaration.txt  invalid-lexemes.txt  invalid-numbers.txt  logical-operators.txt  numbers.txt  valid.txt
tests/invalid/: numbers.txt
